@@ -37,6 +37,7 @@ Doc only changes
 - Make the providers operators/hooks reference much more usable (#17768)
 - Update description about the new ``connection-types`` provider meta-data
 - Suggest to use secrets backend for variable when it contains sensitive data (#17319)
+- Improves quick-start docker-compose warnings and documentation (#18164)
 
 Airflow 2.1.3, 2021-08-21
 -------------------------
